tests/snapshots/markdown_tests__test__allows_mermaid_blocks.snap
---
source: tests/markdown_tests.rs
description: allows_mermaid_blocks
info: "```mermaid\ngraph TD;\n    A-->B;\n    A-->C;\n```"
---
Markdown {
    as_html: "<div class=\"mermaid\">\ngraph TD;\n    A--&gt;B;\n    A--&gt;C;\n</div>",
    headings: [],
    links: [],
}
