tests/snapshots/markdown_tests__test__appends_multiple_parameters_to_the_end_of_absolute_urls.snap
---
source: tests/markdown_tests.rs
description: appends_multiple_parameters_to_the_end_of_absolute_urls
info: "\n[an link](/absolute/link)\n"
---
ParsedMarkdown {
    html: "<p><a href=\"/absolute/link?bases=are&amp;belong=tous\">an link</a></p>\n",
    headings: [],
    links: [
        Link {
            title: "an link",
            url: Local(
                "/absolute/link?bases=are&belong=tous",
            ),
        },
    ],
}
