tests/snapshots/markdown_tests__test__appends_multiple_parameters_to_the_end_of_urls.snap
---
source: tests/markdown_tests.rs
description: appends_multiple_parameters_to_the_end_of_urls
info: "\n[an link](relative/link)\n"
---
Markdown {
    as_html: "<p><a href=\"relative/link?bases=are&amp;belong=tous\">an link</a></p>\n",
    headings: [],
    links: [
        Link {
            title: "an link",
            url: Local(
                "relative/link?bases=are&belong=tous",
            ),
        },
    ],
}
