tests/snapshots/markdown_tests__test__callouts_can_contain_images.snap
---
source: tests/markdown_tests.rs
description: callouts_can_contain_images
info: "> info An Info\n>\n> ![an pic](/cat.jpg)"
---
ParsedMarkdown {
    html: "<div class=\"callout info\"><p class=\"callout-title\">An Info</p>\n<p><img src=\"/cat.jpg\" alt=\"an pic\"></p>\n</div>",
    headings: [],
    links: [],
}
