tests/snapshots/markdown_tests__test__callouts_can_have_stuff_after_it.snap
---
source: tests/markdown_tests.rs
description: callouts_can_have_stuff_after_it
info: "> warning An Note\n> \n> The content\n\nMoar\n"
---
ParsedMarkdown {
    html: "<div class=\"callout warning\"><p class=\"callout-title\">An Note</p>\n<p>The content</p>\n</div>\n<p>Moar</p>\n",
    headings: [],
    links: [],
    blocks: {},
}
