tests/snapshots/markdown_tests__test__callouts_cannot_be_nested.snap
---
source: tests/markdown_tests.rs
description: callouts_cannot_be_nested
info: "{% warning An Warning %}\n{% info An Info %}\nThe content\n{% end %}\nMore content\n{% end %}\n"
---
Markdown {
    as_html: "<div class=\"callout warning\"><p class=\"callout-title\">An Warning</p>\n<p>\n{% info An Info %}\nThe content\n</p>\n</div>\n<p>\nMore content\n{% end %}</p>\n",
    headings: [],
    links: [],
}
