tests/snapshots/markdown_tests__test__callouts_dont_need_space_after_starting.snap
---
source: tests/markdown_tests.rs
description: callouts_dont_need_space_after_starting
info: "{% warning An Note %}\nThe content\n{% end %}\n"
---
Markdown {
    as_html: "<div class=\"callout warning\"><p class=\"callout-title\">An Note</p>\n<p>\nThe content\n</p>\n</div>",
    headings: [],
    links: [],
}
