tests/snapshots/markdown_tests__test__detects_emojis.snap
---
source: tests/markdown_tests.rs
description: detects_emojis
info: "I am :grinning:."
---
ParsedMarkdown {
    html: "<p>I am 😀.</p>\n",
    preview: "I am 😀.",
    headings: [],
    links: [],
    blocks: {},
}
